<resources>
    <string name="app_name">DeftPDF</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="login_with_google">Login with Google</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_account">Login to Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="forgot_text">Enter your email address and we will send you instructions to reset your password.</string>
    <string name="recent_documents">Recent documents</string>
    <string name="signed">Signed</string>
    <string name="draft">Draft</string>
    <string name="pending">Pending</string>
    <string name="recent">Recent</string>
    <string name="template">Template</string>
    <string name="original">Original</string>
    <string name="share_via">Share via</string>
    <string name="box">Box</string>
    <string name="dropbox">Dropbox</string>
    <string name="google_drive">Google Drive</string>
    <string name="evernote">Evernote</string>
    <string name="onedrive">OneDrive</string>
    <string name="other_apps">Other apps</string>
    <string name="import_a_document_from">Import a document from</string>
    <string name="browse_from_phone">Browse from phone</string>
    <string name="request_signature">Request Signature</string>
    <string name="link">Link</string>
    <string name="send_request">Send Request</string>
    <string name="get_link">Get Link</string>
    <string name="copy_link">Copy Link</string>
    <string name="recepients_name">Recepient’s Name</string>
    <string name="add_a_note">Add a Note</string>
    <string name="details_and_activity">Details and Activity</string>
    <string name="document_details">Document Details</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="activity">Activity</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="sign_myself">Sign Myself</string>
    <string name="export">Export</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="default_format">Default Format</string>
    <string name="advanced_features">Advanced Features</string>
    <string name="security">Security</string>
    <string name="cloud_storage">Cloud Storage</string>
    <string name="sort_by">Sort by</string>
    <string name="signs">Signs</string>
    <string name="you_don_t_have_any_sign">You don’t have any sign</string>
    <string name="add_a_sign">+ Add a Sign</string>
    <string name="initials">Initials</string>
    <string name="you_don_t_have_any_initial">You don’t have any initial</string>
    <string name="add_an_initial">+ Add an Initial</string>
    <string name="no_internet">Slow or no internet connection.<br />Please check your internet settings</string>
    <string name="try_again">Try Again</string>
    <string name="filter_by">Filter by</string>
    <string name="rename_file">Rename file</string>
    <string name="file_name">File name</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_sure">Are you sure you want to delete</string>
    <string name="delete_file">Delete file</string>
    <string name="latest_first">Latest first</string>
    <string name="oldest_first">Oldest first</string>
    <string name="reset">Reset</string>
    <string name="this_week_only">This week only</string>
    <string name="this_month_only">This month only</string>
    <string name="delete_initials">Delete initials</string>
    <string name="delete_initials_sure">Are you sure you want to delete initials?</string>
    <string name="delete_signature">Delete signature</string>
    <string name="delete_signature_sure">Are you sure you want to delete signature?</string>
    <string name="draw_your_signature_here">Draw your signature here</string>
    <string name="save">Save</string>
    <string name="generate_link_here">Generated link will be displayed here</string>
    <string name="your_account">Your Account</string>
    <string name="basic_account">Basic Account</string>
    <string name="upgrade_text">Upgrade</string>
    <string name="upgrade_account">Upgrade Account</string>
    <string name="premium_account">Change Plan</string>
    <string name="premium">Premium Account</string>
</resources>