<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/robobo_medium"
        android:text="@string/sort_by"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:background="@color/line" />

    <RadioGroup
        android:id="@+id/sort_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:checkedButton="@id/latest_sort"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/latest_sort"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:fontFamily="@font/roboto_reg"
            android:layoutDirection="rtl"
            android:text="@string/latest_first"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:theme="@style/RadioButtonTheme" />

        <RadioButton
            android:id="@+id/oldest_sort"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:fontFamily="@font/roboto_reg"
            android:layoutDirection="rtl"
            android:text="@string/oldest_first"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:theme="@style/RadioButtonTheme"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:background="@color/line" />

    <LinearLayout
        android:id="@+id/reset"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_reset"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_reg"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:text="@string/reset"
            android:textSize="14sp"/>
    </LinearLayout>


</LinearLayout>