<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5237474F">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/dialog_round_bg"
        android:elevation="4dp"
        android:maxWidth="300dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robobo_medium"
            android:text="@string/rename_file"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_reg"
            android:text="@string/file_name"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_edittext_bg"
            android:fontFamily="@font/roboto_reg"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#878787"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@drawable/ic_main_btn_outline_fiol"
                android:elevation="0dp"
                android:fontFamily="@font/robobo_medium"
                android:paddingStart="13dp"
                android:stateListAnimator="@null"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/main"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirm"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/ic_main_btn"
                android:elevation="0dp"
                android:fontFamily="@font/robobo_medium"
                android:stateListAnimator="@null"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>