<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/burger_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_burger_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/notification_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_bell_notifications"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/item_user" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_reg"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/account_settings_bg"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:paddingStart="1dp"
        android:paddingTop="3dp"
        android:paddingEnd="1dp"
        android:paddingBottom="3dp">


        <LinearLayout
            android:id="@+id/security_tab"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_settings_security" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_reg"
                android:includeFontPadding="false"
                android:text="@string/security"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/ic_main_btn_outline"
        android:elevation="0dp"
        android:fontFamily="@font/robobo_medium"
        android:stateListAnimator="@null"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@color/main"
        android:textSize="15sp" />

</LinearLayout>